[MENU] Fix invisible playfield border

--- a/dots-connect.css
+++ b/dots-connect.css
@@ -122,7 +122,7 @@ button:focus {
 }
 
 #playfield.glowDisabled {
-    box-shadow: 0 0 0 0 rgba(255, 165, 0, 0.7);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
     transition: box-shadow 0.3s, border 0.3s;
     border: none;
 }
